// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package core.v1alpha1;

import "core/v1alpha1/extension.proto";
import "core/v1alpha1/locator.proto";
import "core/v1alpha1/skill.proto";

// Data model defines a schema for versioned AI agent content representation.
// The schema provides a way to describe features, constraints, artifact
// locators, and other relevant details of an agent.
//
// Key := {name} - newest release
// Key := {name}:{version} - newest versioned release
// Key := {name}@{digest} - exact release
// Key := {name}:{version}@{digest} - exact versioned release
//
// This is an immutable object.
//
// Max size: 4 MB (or to fully fit in a single request)
// https://opencontainers.org/posts/blog/2024-03-13-image-and-distribution-1-1/#manifest-maximum-size
message Agent {
  // Schema version of the agent.
  string schema_version = 1;
  // Name of the agent.
  string name = 2;
  // Version of the agent.
  string version = 3;
  // Description of the agent.
  string description = 4;
  // List of agentâ€™s authors in the form of `author-name <author-email>`.
  repeated string authors = 5;
  // Creation timestamp of the agent in the RFC3339 format.
  // Specs: https://www.rfc-editor.org/rfc/rfc3339.html
  string created_at = 6;
  // Additional metadata associated with this agent.
  map<string, string> annotations = 7;
  // List of skills that this agent can perform.
  repeated Skill skills = 8;
  // List of source locators where this agent can be found or used from.
  repeated Locator locators = 9;
  // List of extensions that describe this agent and its capabilities
  // and constraints more in depth.
  repeated Extension extensions = 10;
}
